<resources>
    <string name="app_name">Hostel Management System</string>
    ///Login
    <string name="loginHeadingTextView">HMS Login</string>
    <string name="loginDetail">Email</string>
    <string name="loginPassword">Password</string>
    <string name="signInButton">Sign in</string>

    <string name="registerHeadingTextView">Register</string>
    <string name="registerButton">New User?</string>
    <string name="forget_password">forget password?</string>
    <string name="registerConfirmPassword">Confirm Password</string>
    <string name="registerEmail">Email</string>
    <string name="register_sipa_id">HMS</string>
    <string name="register_phone_number">Phone Number</string>
    <string name="register_name">Name</string>
    <string name="register">Register</string>

    <string name="welcome_Message">Welcome to HMS</string>

    <string name="attendance_image_button">attendance_image_button</string>
    <string name="attendance_text">Attendance</string>
    <string name="messBill_text">Mess Bill</string>
    <string name="messBill_image">messBillImage</string>
    <string name="profile_image">profileImage</string>
    <string name="room_details_text">Room Details</string>
    <string name="title_activity_attendance">Attendance</string>
    <string name="take_attendance">Take Attendance</string>
    <string name="view_attendance">View Attendance</string>
    <string name="edit_attendance">Edit Attendance</string>
    <string name="block">Block</string>
    <string name="floor">Floor</string>
    <string name="starting_room_number">Starting Room Number</string>
    <string name="ending_room_number">Ending Room Number</string>
    <string name="date">Date</string>
    <string name="month">Month</string>
    <string name="year">Year</string>
    <string name="mess_bill_download_button">Download</string>
    <string name="ending_date">Ending Date</string>
    <string name="gst_in_percentage">GST(In Percentage)</string>
    <string name="starting_date">Starting Date</string>
    <string name="news_bill_per_day">NEWS Bill Per Day</string>
    <string name="eb_bill_per_day">EB Bill Per Day</string>
    <string name="mess_bill_per_day">Mess Bill Per Day</string>
    <string name="mess_bill_downloader">Mess Bill Downloader</string>
    <string name="title_activity_profile">MainActivity</string>
    <string name="room_allocate">Room Allocate</string>
    <string name="room_update">Room Update</string>
    <string name="room_vacate">Room Vacate</string>
    <string name="dateFormat">%d/%d/%d</string>
    <string name="room_no">Room No</string>
    <string name="student_details">Student Details</string>
    <string name="name">Name</string>
    <string name="college_name">College Name</string>
    <string name="course_name">Course Name</string>
    <string name="branch_name">Branch Name</string>
    <string name="to_year">To</string>
    <string name="from_year">From</string>
    <string name="text_to">To</string>
    <string name="student_id">Student Id (18BIT008)</string>
    <string name="search">Search</string>
    <string name="mess_bill">Mess Bill</string>
    <string name="dept">Dept</string>
    <string name="attendance">Attendance</string>
    <string name="ambulance">Ambulance</string>
    <string name="save_next"><![CDATA[Save & Next]]></string>
    <string name="ambulance_charge_text_1">Ambulance charges for student1Name</string>
    <string name="ambulance_charge_text_2">Ambulance charges for student2Name</string>
    <string name="ambulance_charge_text_3">Ambulance charges for student3Name</string>
    <string name="ambulance_charge_text_4">Ambulance charges for student4Name</string>
    <string name="previous">Previous</string>
    <string name="save">Save</string>
    <string name="batch">Batch</string>
    <string name="student_register_id">Student ID</string>
    <string name="serial_no">S.No</string>
    <string name="blood_group">Blood Group</string>
    <string name="roll_no">Roll No</string>
    <string name="designation">Designation</string>
    <string name="accessUpdate">update</string>
    <string name="forget_password_heading">Forget Password</string>
    <string name="title_activity_forget_password">Forget Password</string>
    <string name="enter_your_otp">Enter Your OTP</string>
    <string name="title_activity_login">Login</string>
    <string name="send_otp">Send OTP</string>
    <string name="forgetPasswordDetails">Phone Number or Email</string>
    <string name="remember_me">Remember Me</string>
    <string name="logout">Logout</string>
    <string name="access_level_modifier">Access Level Modifier</string>
    <string name="access_modifier">Access Modifier</string>
</resources>