<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation_room_details"
    app:startDestination="@+id/navigation_room_allocate">

    <fragment
        android:id="@+id/navigation_room_allocate"
        android:name="com.android.HMS.ui.RoomDetails.RoomAllocate.RoomAllocateFragment"
        android:label="@string/room_allocate"
        tools:layout="@layout/fragment_room_allocate" />

    <fragment
        android:id="@+id/navigation_room_update"
        android:name="com.android.HMS.ui.RoomDetails.RoomUpdate.RoomUpdateFragment"
        android:label="@string/room_update"
        tools:layout="@layout/fragment_room_update" />

    <fragment
        android:id="@+id/navigation_room_vacate"
        android:name="com.android.HMS.ui.RoomDetails.RoomVacate.RoomVacateFragment"
        android:label="@string/room_vacate"
        tools:layout="@layout/fragment_room_vacate" />
</navigation>