<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_take_attendance">

    <fragment
        android:id="@+id/navigation_take_attendance"
        android:name="com.android.HMS.ui.Attendance.TakeAttendance.TakeAttendanceFragment"
        android:label="@string/take_attendance"
        tools:layout="@layout/fragment_take_attendance" />

    <fragment
        android:id="@+id/navigation_view_attendance"
        android:name="com.android.HMS.ui.Attendance.ViewAttendance.ViewAttendanceFragment"
        android:label="@string/view_attendance"
        tools:layout="@layout/fragment_view_attendance" />

    <fragment
        android:id="@+id/navigation_edit_attendance"
        android:name="com.android.HMS.ui.Attendance.EditAttendance.EditAttendanceFragment"
        android:label="@string/edit_attendance"
        tools:layout="@layout/fragment_edit_attendance" />
</navigation>