<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_height="match_parent"
    android:layout_width="match_parent"
    tools:context=".ui.MainMenu.MainMenu" >

    <ScrollView
        android:id="@+id/scrollView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">


    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/welcome"
            android:layout_width="377dp"
            android:layout_height="277dp"
            android:layout_gravity="center"
            android:layout_marginTop="24dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/ic_welcome"
            android:contentDescription="@string/welcome_Message" />

        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:fontFamily="@font/segeoprint"
            android:text="@string/welcome_Message"
            android:textAlignment="textEnd"
            android:textSize="34sp"
            android:textStyle="bold|italic"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/welcome" />


        <ImageButton
            android:id="@+id/attendanceImage"
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:layout_marginTop="24dp"
            android:background="@null"
            android:contentDescription="@string/attendance_image_button"
            android:scaleType="fitCenter"
            android:src="@drawable/attendance"
            app:layout_constraintEnd_toStartOf="@+id/messBillImage"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/segeoprint"
            android:text="@string/attendance_text"
            android:textSize="24sp"
            app:layout_constraintEnd_toEndOf="@+id/attendanceImage"
            app:layout_constraintStart_toStartOf="@+id/attendanceImage"
            app:layout_constraintTop_toBottomOf="@+id/attendanceImage" />

        <ImageButton
            android:id="@+id/messBillImage"
            android:layout_width="120dp"
            android:layout_height="150dp"
            android:background="@null"
            android:scaleType="fitCenter"
            android:src="@drawable/bill"
            app:layout_constraintBottom_toBottomOf="@+id/attendanceImage"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/attendanceImage"
            app:layout_constraintTop_toTopOf="@+id/attendanceImage"
            app:layout_constraintVertical_bias="0.0"
            android:contentDescription="@string/messBill_image" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/segeoprint"
            android:text="@string/messBill_text"
            android:textSize="24sp"
            app:layout_constraintEnd_toEndOf="@+id/messBillImage"
            app:layout_constraintStart_toStartOf="@+id/messBillImage"
            app:layout_constraintTop_toBottomOf="@+id/messBillImage" />

        <ImageButton
            android:id="@+id/roomDetailsImage"
            android:layout_width="120dp"
            android:layout_height="150dp"
            android:layout_marginTop="24dp"
            android:background="@null"
            android:scaleType="fitCenter"
            android:src="@drawable/ic_room_details"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="@+id/attendanceImage"
            app:layout_constraintStart_toStartOf="@+id/attendanceImage"
            app:layout_constraintTop_toBottomOf="@+id/attendanceImage"
            android:contentDescription="@string/profile_image" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/segeoprint"
            android:text="@string/room_details_text"
            android:textSize="24sp"
            app:layout_constraintEnd_toEndOf="@+id/roomDetailsImage"
            app:layout_constraintStart_toStartOf="@+id/roomDetailsImage"
            app:layout_constraintTop_toBottomOf="@+id/roomDetailsImage" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>