<?xml version="1.0" encoding="utf-8"?>
<FrameLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.LRF.ForgetPassword.ForgetPasswordFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center">

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/materialTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginBottom="16dp"
            android:text="@string/forget_password_heading"
            android:textSize="@dimen/loginHeadingSize"
            app:layout_constraintBottom_toTopOf="@+id/emailLayout"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

        </com.google.android.material.textview.MaterialTextView>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/emailLayout"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="16dp"
            android:hint="@string/forgetPasswordDetails"
            android:textColor="@color/white"
            app:endIconMode="clear_text"
            app:errorIconDrawable="@null"
            app:errorEnabled="true"
            app:layout_constraintBottom_toTopOf="@+id/otpLayout"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/materialTextView"
            app:startIconContentDescription="login_email_icon"
            app:startIconDrawable="@drawable/ic_login_user">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/email"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ems="20"
                android:inputType="textPersonName" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/otpLayout"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="16dp"
            android:layout_marginBottom="16dp"
            android:enabled="false"
            android:hint="@string/enter_your_otp"
            android:textColor="@color/white"
            app:errorEnabled="true"
            app:endIconMode="clear_text"
            app:layout_constraintBottom_toTopOf="@+id/passwordLayout"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/emailLayout"
            app:startIconContentDescription="login_email_icon"
            app:startIconDrawable="@drawable/ic_baseline_lock_24">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/otp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ems="20"
                android:inputType="phone"
                android:maxLength="6" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/passwordLayout"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginBottom="16dp"
            app:errorEnabled="true"
            android:visibility="gone"
            android:hint="@string/loginPassword"
            app:endIconMode="password_toggle"
            app:errorIconDrawable="@null"
            app:layout_constraintBottom_toTopOf="@+id/confirmPasswordLayout"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/otpLayout"
            app:startIconContentDescription="login_email_icon"
            app:startIconDrawable="@drawable/ic_register_password">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/password"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ems="20"
                android:inputType="textPassword" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/confirmPasswordLayout"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginBottom="16dp"
            android:hint="@string/registerConfirmPassword"
            app:errorEnabled="true"
            android:visibility="gone"
            app:endIconMode="password_toggle"
            app:errorIconDrawable="@null"
            app:layout_constraintBottom_toTopOf="@+id/forgetPassword"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/passwordLayout"
            app:startIconContentDescription="login_email_icon"
            app:startIconDrawable="@drawable/ic_login_password">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/confirmPassword"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ems="20"
                android:inputType="textPassword" />
        </com.google.android.material.textfield.TextInputLayout>


        <Button
            android:id="@+id/forgetPassword"
            style="@style/Widget.MaterialComponents.Button.Icon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/send_otp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</FrameLayout>